--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.17",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "postcss": "^8.4.33",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
