--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
